@@ -66,3 +66,34 @@ There is lots to do, and not all of it requires programming. Read our
     attached to <tt>lilypond-devel@gnu.org</tt>, or to one of the
     maintainers.
 </ul>
+
+
+<h2>Documentation suggestions</h2>
+<p>
+If you have suggestions for the documentation, please be as specific as
+possible.  &ldquo;The docs for lyrics suck!&rdquo; isn't a very useful
+suggestion.  Instead, please tell us exactly what to change and where
+to change it.  For example,
+
+<pre>
+http://lilypond.org/doc/v2.4/Documentation/user/out-www/lilypond/Printing-lyrics.html
+In section 2.13 (printing lyrics), above the last line ("More options, like..."),
+please add:
+
+----
+To add lyrics to a divided part, use foo bar.  For example,
+
+\score {
+ \notes {blah &#060;&#060;blah&#062;&#062; }
+ \lyrics {blah &#060;&#060;blah&#062;&#062; }
+ blah blah blah
+}
+----
+</pre>
+
+We may edit your suggestion (for spelling, grammar, or style), and we may
+not place the material exactly where you suggested, but if you give us
+some material to work with, we can improve the manual much faster than
+if you simply suggest &ldquo;why don't you add more stuff about lyrics
+to the docs?&rdquo;
+
