@@ -105,7 +105,7 @@
 <h2>Broken code</h2>
 <p>
 
-Do not to write broken code. This includes hardwired dependencies,
+Do not write broken code. This includes hardwired dependencies,
 hardwired constants, slow algorithms and obvious limitations. If
 you can not avoid it, mark the place clearly, and add a comment
 explaining shortcomings of the code.
